--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -1,5 +1,7 @@
 {# templates/usuarios/login.html #}
 {% extends '_base.html' %}
+{% load static %}
+
 
 {% block content %}
 <div class="auth-container" style="max-width: 400px; margin: auto; padding: 20px; border: 1px solid #ccc; border-radius: 5px;">
