--- a/templates/usuarios/usuario_edit.html
+++ b/templates/usuarios/usuario_edit.html
@@ -1,4 +1,3 @@
-{# templates/usuarios/usuario_edit.html #}
 {% extends '_base.html' %}
 
 {% load static %}
@@ -11,9 +10,12 @@
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn-primary">Guardar Cambios</button>
-      <a href="{% url 'usuarios:detail' usuario.id %}" class="btn btn-secondary">Cancelar</a>
+      {% if usuario %}
+        <a href="{% url 'usuarios:detail' usuario.id %}" class="btn btn-secondary">Cancelar</a>
+      {% else %}
+        <a href="{% url 'usuarios:list' %}" class="btn btn-secondary">Cancelar</a>
+      {% endif %}
     </form>
 </div>
 <script src="{% static 'usuarios/js/usuario_edit.js' %}"></script>
 {% endblock %}
-
